[metadata]
name = django-qns
version = 0.0.1
description = django qiniu cloud storage
long_description = file: README.md, LICENSE
keywords = django, qiniu, qiniuyun, qiniucloud, storage
license = MIT License
classifiers =
    Framework :: Django
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
